# implicitlidar

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  run_all.sh
assets/: README.md
assets/kuka_iiwa_14/: scene.xml
assets/scenes/: lidar_template.xml
docs/: index.html  styles.css
implicitlidar/: __init__.py
implicitlidar/core/: __init__.py  constraints.py  design_space.py  em_synthesis.py  flow.py  runner.py  sampling.py  target_density.py  training.py
implicitlidar/eval/: __init__.py  bandwidth.py  baselines.py  intersections.py  metrics.py  reconstruction.py
implicitlidar/experiments/: __init__.py
implicitlidar/experiments/emitter_design/: README.md  __init__.py  _geometry.py  _render.py  _vec.py  _xml.py  evaluate.py  synthesize.py  train.py
implicitlidar/experiments/emitter_design/configs/: default.yaml
implicitlidar/experiments/face_scanning/: README.md  __init__.py  evaluate.py  prepare.py  synthesize.py  train.py
implicitlidar/experiments/face_scanning/configs/: default.yaml
implicitlidar/experiments/real_world/: README.md  __init__.py  process_measurement.py  reconstruct.py
implicitlidar/experiments/robot_tracking/: README.md  __init__.py  _scene.py  evaluate.py  synthesize.py  train.py
implicitlidar/experiments/robot_tracking/configs/: default.yaml  with_visibility.yaml
implicitlidar/experiments/warehouse_detection/: README.md  __init__.py  evaluate.py  prepare.py  synthesize.py  train.py
implicitlidar/experiments/warehouse_detection/configs/: default.yaml
implicitlidar/scenes/: __init__.py  faces.py  robot_arm.py  warehouse.py
implicitlidar/utils/: __init__.py  config.py  gpu.py  io.py
tests/: test_core.py  test_metrics.py
