[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "implicitlidar"
version = "0.1.0"
description = "Task-Driven Implicit Representations for Automated Design of LiDAR Systems (CVPR 2026)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Nikhil Behari" },
    { name = "Aaron Young" },
    { name = "Tzofi Klinghoffer" },
    { name = "Akshat Dave" },
    { name = "Ramesh Raskar" },
]
keywords = ["lidar", "computational-imaging", "normalizing-flows", "implicit-representations", "sensor-design"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core numerics and ML
    "torch>=2.1",
    "numpy>=1.24",
    "scipy>=1.10",
    # Normalizing flows
    "normflows>=1.7",
    # Mesh / SDF utilities
    "trimesh>=4.0",
    "pytorch_volumetric>=0.6",
    "mesh2sdf>=1.1",
    "open3d>=0.17",
    "rtree>=1.0",
    "shapely>=2.0",
    # I/O and data wrangling
    "h5py>=3.8",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# Per-experiment extras (install only what you need)
robot = [
    # Robot tracking: MuJoCo drives forward kinematics
    # for trajectory generation; pytorch_kinematics + the URDF bundled with
    # pybullet_data drive the per-link SDFs used as occluder geometry.
    "mujoco>=3.0",
    "pytorch_kinematics>=0.7",
    "pybullet>=3.2",
]
emitter = [
    # Emitter design: transient light-transport simulation
    "mitsuba>=3.5",
    "mitransient>=1.3",
    "drjit>=1.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]
all = [
    "implicitlidar[robot,emitter,dev]",
]

[project.urls]
Homepage = "https://nikhilbehari.github.io/implicitlidar"
Paper = "https://nikhilbehari.github.io/implicitlidar"
Repository = "https://github.com/NikhilBehari/implicitlidar"

[tool.setuptools.packages.find]
where = ["."]
include = ["implicitlidar*"]
exclude = ["tests*", "scripts*", "assets*", "docs*", "outputs*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length handled by formatter
    "B905",  # zip(strict=...) is verbose for paired iterables of known length
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
